# toml-fmt

./: Cargo.toml  LICENSE  README.md
examples/: test.toml
src/: main.rs
