[package]
name = "toml-fmt"
readme = "README.md"
repository = "https://github.com/segeljakt/toml-fmt"
homepage = "https://github.com/segeljakt/toml-fmt"
description = "Format .toml files"
version = "0.2.0"
authors = ["Klas Segeljakt <klasseg@kth.se>"]
edition = "2021"
license = "MIT"

[dependencies]
toml = { version = "0.5", features = ["preserve_order"] }
